--- a/JeffSite/wwwroot/css/site.css
+++ b/JeffSite/wwwroot/css/site.css
@@ -62,12 +62,9 @@ a {
   width: 170px;
 }
 
-.livro{
-  background-color: #EEEEEE;
-}
+
 .fotoLivro{
-  width: 200px;
-  height: 200px;
+  background-color: #EEEEEE;
 }
 .fotoLivro img{
   width: 80%;
@@ -76,28 +73,26 @@ a {
 }
 .descricao{
   background-color: #F6F6F6;
-  margin-left: 210px;
-  margin-top: -200px;
-  height: 200px;
+  height: 100%;
 }
 .descricao-titulo{
-  width: 100%;
   padding-left: 15px;
+  padding-top: 2%;
 }
 .descricao-corpo{
   width: 100%;
   text-align: justify;
-  padding-left: 30px;
+  /* padding-left: 30px; */
   padding-right: 20px;
 }
 .descricao-corpo p{
   font-style: italic;
 }
-.descricao-links{
+/* .descricao-links{
   margin-right: 10px;
   position: absolute;
   bottom: 0;
-}
+} */
 .descricao-links ul li{
 display: inline;
 text-decoration: none;
@@ -109,7 +104,8 @@ color: #757373;
 .mercado-livre{
   background-color: #F0F0F0;
   margin-bottom: 20px;
-  text-align: center;
+  padding: 10px;
+  padding-left: 25%;
 }
 .mercado-livre a{
   text-decoration: none; 
@@ -224,6 +220,12 @@ html {
     #socialMidiaDiv{
         margin-left: -45px;
         margin-top: -35px;
+    }
+
+    .mercado-livre{
+      background-color: #F0F0F0;
+      margin-bottom: 20px;
+      padding: 10px;
     }
 
 }
