--- a/JeffSite/Views/Malling/EnviarEmailMailling.cshtml
+++ b/JeffSite/Views/Malling/EnviarEmailMailling.cshtml
@@ -55,8 +55,11 @@
         var quill = new Quill('#editor', {
             modules: {
                 toolbar: [
+                [{ 'font': [] }],
                 [{ header: [1, 2, 3, 4, 5, 6,  false] }],
+                [{ 'align': [] }],
                 ['bold', 'italic', 'underline','strike'],
+                [{ 'color': [] }, { 'background': [] }],
                 ['image', 'code-block'],
                 ['link'],
                 [{ 'script': 'sub'}, { 'script': 'super' }],
