--- a/JeffSite_WF_472/Views/Home/Index.cshtml
+++ b/JeffSite_WF_472/Views/Home/Index.cshtml
@@ -1,31 +1,61 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<JeffSite_WF_472.Models.Carousel>
+@{
+    ViewData["Title"] = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div>
+    <div>
+        <h1 class="Titulo">Um pouquinho <span>sobre</span>...</h1>
+        <div>
+            <p>
+                <span class="primeira-letra">A</span>utor de obras de fantasia, suspense, terror e sci-fi, redator freelancer, roteirista de quadrinhos, produtor de conteúdo de boardgames e RPG, membro ativo da Aberst (Associação Brasileira de Escritores de Romance Policial, Suspense e Terror), ator, escultor, mestre de RPG há 31 anos e chutador oficial de meteoros.
+            </p>
+        </div>
+        <div style="text-align:right">
+            <a asp-action="BioCompleta">Saiba mais...</a>
+        </div>
+    </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    @*<div id="carrosselMain" >
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                @foreach(var item in ViewBag.Carousels)
+                { 
+                    <li data-target="#carouselExampleIndicators" data-slide-to="@item.Id" class="active"></li>
+                }
+            </ol>
+            <div class="carousel-inner">
+                @{ int cont = 1; }
+                @foreach(var item in (List<JeffSite_WF_472.Models.Carousel>)ViewBag.Carousels){
+                    @if(cont++ != ViewBag.CarouselsQuantity){
+                        <div class="carousel-item">
+                            <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..//img//Carousel//",item.Image)">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5><a href="@item.Link" target="_blank">@item.Title</a></h5>
+                                <p>@item.Description</p>
+                            </div>
+                        </div>
+                    }else{
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..//img//Carousel//",item.Image)">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5><a href="@item.Link" target="_blank">@item.Title</a></h5>
+                                <p>@item.Description</p>
+                            </div>
+                        </div>
+                    }
+                    
+                }
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>*@
+    
 </div>
