--- a/JeffSite_WF_472/Views/Home/Contato.cshtml
+++ b/JeffSite_WF_472/Views/Home/Contato.cshtml
@@ -1,9 +1,6 @@
-﻿@page
-@{
-}
-
+﻿
 <div class="text-center">
-    <h1 class="Titulo"><span>Contato<span></h1>
+    <h1 class="Titulo"><span>Contato</span></h1>
     <div style="text-align: left" >
         @if(!string.IsNullOrEmpty(ViewBag.Message)){
             if((bool)ViewBag.Enviado){
