--- a/JeffSite_WF_472/Views/Home/Index.cshtml
+++ b/JeffSite_WF_472/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
 @{
     ViewData["Title"] = "Home Page";
     List<JeffSite_WF_472.Models.Carousel> carousels = ViewBag.Carousels;
+    int cont = 1;
+    int qntCarousels = (int)ViewBag.CarouselsQuantity;
 }
 
 <div>
@@ -17,7 +19,7 @@
         </div>
     </div>
 
-   @*<div id="carrosselMain" >
+    <div id="carrosselMain">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 @foreach (var item in ViewBag.Carousels)
@@ -26,9 +28,10 @@
                 }
             </ol>
             <div class="carousel-inner">
-                @{ int cont = 1; }
-                @foreach(var item in (List<JeffSite_WF_472.Models.Carousel>)ViewBag.Carousels){
-                    @if(cont++ != ViewBag.CarouselsQuantity){
+                @foreach (var item in carousels)
+                {
+                    if (cont++ != qntCarousels)
+                    {
                         <div class="carousel-item">
                             <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..//img//Carousel//",item.Image)">
                             <div class="carousel-caption d-none d-md-block">
@@ -36,7 +39,9 @@
                                 <p>@item.Description</p>
                             </div>
                         </div>
-                    }else{
+                    }
+                    else
+                    {
                         <div class="carousel-item active">
                             <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..//img//Carousel//",item.Image)">
                             <div class="carousel-caption d-none d-md-block">
@@ -45,7 +50,6 @@
                             </div>
                         </div>
                     }
-                    
                 }
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -57,6 +61,6 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-    </div>*@
-    
+    </div>
+
 </div>
