--- a/JeffSite_WF_472/Views/Admin/Index.cshtml
+++ b/JeffSite_WF_472/Views/Admin/Index.cshtml
@@ -1,37 +1,66 @@
 ﻿@model JeffSite_WF_472.Models.User
 @{
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
-    string user = "";
+    string user = TempData["user"] == null ? string.Empty : TempData["user"].ToString();
 }
 
-<div class="container" 
-    style="width: 50%;
+<div class="container"
+     style="width: 50%;
     margin-top: 10%;
     border: 2px black solid;
     border-radius: 20px;
     padding: 20px;
     background-color: #EBEBEB;">
     <h1 style="text-align: center;">Login</h1>
-    <form method="post" asp-action="ValidateUser" asp-controller="Admin">
+
+    @using (Html.BeginForm("ValidateUser", "Admin"))
+    {
+        @Html.AntiForgeryToken()
         <div class="form-group">
             <label for="exampleInputEmail1">Usuario</label>
-            <input type="text" class="form-control" placeholder="Digite o usuario" asp-for="UserName" value="@user">
+            @*<input type="text" class="form-control" placeholder="Digite o usuario" asp-for="UserName" value="@user">*@
+            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", type = "text", placeholder = "Digite o usuario", value = @user } })
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Senha</label>
-            <input type="password" class="form-control" placeholder="Digite a senha" asp-for="Pass">
+            @*<input type="password" class="form-control" placeholder="Digite a senha" asp-for="Pass">*@
+            @Html.EditorFor(model => model.Pass, new { htmlAttributes = new { @class = "form-control", type = "password", placeholder = "Digite a senha" } })
         </div>
-
-        @if (TempData["message"] != null)
+        if (TempData["message"] != null)
         {
             <div class="alert alert-danger" role="alert">
                 <b>Erro: </b>@TempData["message"].ToString()
             </div>
-            if(TempData["user"] != null){
+            if (!string.IsNullOrEmpty(user))
+            {
                 user = TempData["user"].ToString();
             }
         }
-
         <button type="submit" class="btn btn-primary">Logar</button>
-    </form>
+    }
+
+
+    @*<form method="post" asp-action="ValidateUser" asp-controller="Admin">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Usuario</label>
+                <input type="text" class="form-control" placeholder="Digite o usuario" asp-for="UserName" value="@user">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Senha</label>
+                <input type="password" class="form-control" placeholder="Digite a senha" asp-for="Pass">
+            </div>
+
+            @if (TempData["message"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    <b>Erro: </b>@TempData["message"].ToString()
+                </div>
+                if (TempData["user"] != null)
+                {
+                    user = TempData["user"].ToString();
+                }
+            }
+
+            <button type="submit" class="btn btn-primary">Logar</button>
+        </form>*@
 </div>
