--- a/JeffSite_WF_472/Views/Shared/_LayoutLogin.cshtml
+++ b/JeffSite_WF_472/Views/Shared/_LayoutLogin.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Autor JP</title>
+    <title>@ViewData["Title"]Administrador - Autor JP</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="preconnect" href="https://fonts.gstatic.com">
