ajuste nos links e rotas

--- a/JeffSite_WF_472/Views/Leitor/Approve.cshtml
+++ b/JeffSite_WF_472/Views/Leitor/Approve.cshtml
@@ -1,7 +1,7 @@
-@model JeffSite.Models.Leitor
+@model JeffSite_WF_472.Models.Leitor
 @{
-    Layout = "_LayoutAdmin";
-    string nameImg = Model.NameImg; 
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+    string nameImg = Model.NameImg;
 }
 <h1>@ViewData["Title"]</h1>
 
