--- a/JeffSite_WF_472/Views/Leitor/ApprovePost.cshtml
+++ b/JeffSite_WF_472/Views/Leitor/ApprovePost.cshtml
@@ -1,6 +1,6 @@
-@model IEnumerable<JeffSite.Models.Leitor>
+@model IEnumerable<JeffSite_WF_472.Models.Leitor>
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <h1>@ViewData["Title"]</h1>
 
