--- a/JeffSite_WF_472/Views/Loja/DeletePedido.cshtml
+++ b/JeffSite_WF_472/Views/Loja/DeletePedido.cshtml
@@ -1,6 +1,6 @@
-@model JeffSite.Models.Loja.Pedido
+@model JeffSite_WF_472.Models.Loja.Pedido
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     int status = (int)Model.Status;
 }
 
