--- a/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
+++ b/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
@@ -1,6 +1,6 @@
-@model User
+@model JeffSite_WF_472.Models.User
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <div class="container">
@@ -14,7 +14,3 @@
         <button type="submit" class="btn btn-primary">Alterar</button>
     </form>
 </div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
