--- a/JeffSite_WF_472/Views/Leitor/Index.cshtml
+++ b/JeffSite_WF_472/Views/Leitor/Index.cshtml
@@ -8,7 +8,7 @@
     
 </style>
 <div class="container">
-  <h1 class="Titulo"><span>@ViewBag.Title<span></h1>
+  <h1 class="Titulo"><span>@ViewBag.Title</span></h1>
   <div class="row">
     <div class="col-sm-8">
         @{
