--- a/JeffSite_WF_472/Views/Loja/Create.cshtml
+++ b/JeffSite_WF_472/Views/Loja/Create.cshtml
@@ -1,6 +1,6 @@
-@model JeffSite.Models.Livro.Livro
+@model JeffSite_WF_472.Models.Livro.Livro
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <br>
 <h1>@ViewData["Title"]</h1>
@@ -31,7 +31,3 @@
     <a asp-controller="Loja" asp-action="ListLivros">Voltar</a>
     <button class="btn btn-primary">Proximo</button>
 </form>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
