--- a/JeffSite_WF_472/Views/Loja/Delete.cshtml
+++ b/JeffSite_WF_472/Views/Loja/Delete.cshtml
@@ -1,6 +1,6 @@
-@model JeffSite.Models.Livro.Livro
+@model JeffSite_WF_472.Models.Livro.Livro
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     string pathImg = System.IO.Path.Combine("..","..","img","Livro");
 }
 <br>
