--- a/JeffSite_WF_472/Views/Loja/EditWhereToBuy.cshtml
+++ b/JeffSite_WF_472/Views/Loja/EditWhereToBuy.cshtml
@@ -1,6 +1,6 @@
-@model JeffSite.Models.Livro.WhereToBuy
+@model JeffSite_WF_472.Models.Livro.WhereToBuy
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <script src="lib/jquery/dist/jquery.min.js"></script>
 <br>
