--- a/JeffSite_WF_472/Views/Loja/ListLivros.cshtml
+++ b/JeffSite_WF_472/Views/Loja/ListLivros.cshtml
@@ -1,6 +1,6 @@
-@model IEnumerable<JeffSite.Models.Livro.Livro>
+@model IEnumerable<JeffSite_WF_472.Models.Livro.Livro>
 @{
-    Layout = "_LayoutAdmin";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
     string pathImg = System.IO.Path.Combine("..","img","Livro");
 }
 
