--- a/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
+++ b/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
@@ -3,7 +3,22 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="container">
+@using (Html.BeginForm("ChangePassword", "Admin"))
+{
+    @Html.AntiForgeryToken()
+    <input type="hidden" asp-for="UserName">
+    <div class="form-group">
+        <label for="exampleInputPassword1">Senha</label>
+        @*<input type="password" class="form-control" placeholder="Senha" asp-for="Pass">*@
+        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", type = "hidden"} })
+        @Html.EditorFor(model => model.Pass, new { htmlAttributes = new { @class = "form-control", type = "password", value = "" } })
+        <span asp-validation-for="Pass" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Alterar</button>
+}
+
+
+@*<div class="container">
     <form asp-controller="Admin" asp-action="ChangePassword" method="POST">
         <input type="hidden" asp-for="UserName">
         <div class="form-group">
@@ -13,4 +28,4 @@
         </div>
         <button type="submit" class="btn btn-primary">Alterar</button>
     </form>
-</div>
+</div>*@
