--- a/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
+++ b/JeffSite_WF_472/Views/Admin/ChangePassword.cshtml
@@ -11,7 +11,7 @@
         <label for="exampleInputPassword1">Senha</label>
         @*<input type="password" class="form-control" placeholder="Senha" asp-for="Pass">*@
         @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", type = "hidden"} })
-        @Html.EditorFor(model => model.Pass, new { htmlAttributes = new { @class = "form-control", type = "password", value = "" } })
+        @Html.EditorFor(model => model.Pass, new { htmlAttributes = new { @class = "form-control", type = "password" } })
         <span asp-validation-for="Pass" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Alterar</button>
