--- a/JeffSite_WF_472/Views/SocialMidia/Delete.cshtml
+++ b/JeffSite_WF_472/Views/SocialMidia/Delete.cshtml
@@ -6,16 +6,17 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Delete">
-
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.Name)</label>
-        <input type="text" class="form-control" asp-for="Name" readonly>
-    </div>
-    <div class="form-group">
-        <label>@Html.DisplayNameFor(Model => Model.Url)</label>
-        <input type="text" class="form-control" asp-for="Url" readonly>
-    </div>
-    <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
-    <button class="btn btn-danger">Excluir</button>
-</form>
+@using (Html.BeginForm("Delete", "SocialMidia"))
+{
+    @Html.AntiForgeryToken()
+<div class="form-group">
+    <label>@Html.DisplayNameFor(Model => Model.Name)</label>
+    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
+</div>
+<div class="form-group">
+    <label>@Html.DisplayNameFor(Model => Model.Url)</label>
+    @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
+</div>
+    @Html.ActionLink("Voltar", "Index", "SocialMidia")
+    <button class="btn btn-danger" type="submit">Salvar</button>
+}
