--- a/JeffSite_WF_472/Views/SocialMidia/Edit.cshtml
+++ b/JeffSite_WF_472/Views/SocialMidia/Edit.cshtml
@@ -7,7 +7,38 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Edit">
+@using (Html.BeginForm("Edit", "SocialMidia"))
+{
+    <div class="input-group mb-3">
+        <div class="input-group-prepend">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="btnIcon">
+                <span id="label-icon">Icone</span>
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" onclick="changeIcon('Facebook','fab fa-facebook-square')" href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+                <a class="dropdown-item" onclick="changeIcon('Instagram','fab fa-instagram-square')" href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+                <a class="dropdown-item" onclick="changeIcon('Twitter','fab fa-twitter-square')" href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                <a class="dropdown-item" onclick="changeIcon('GoodReads','fab fa-goodreads')" href="#"><i class="fab fa-goodreads"></i> GoodReads</a>
+                <a class="dropdown-item" onclick="changeIcon('WhatsApp','fab fa-whatsapp-square')" href="#"><i class="fab fa-whatsapp-square"></i> WhatsApp</a>
+                <a class="dropdown-item" onclick="changeIcon('Telegram','fab fa-telegram')" href="#"><i class="fab fa-telegram"></i> Telegram</a>
+                <a class="dropdown-item" onclick="changeIcon('Facebook-Messager','fab fa-facebook-messenger')" href="#"><i class="fab fa-facebook-messenger"></i>Facebook-Messager</a>
+                <a class="dropdown-item" onclick="changeIcon('TikTok','fab fa-tiktok')" href="#"><i class="fab fa-tiktok"></i>TikTok</a>
+            </div>
+        </div>
+        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
+        @Html.EditorFor(model => model.IconFA, new { htmlAttributes = new { @class = "form-control", type = "hidden" } })
+    </div>
+    <div class="form-group">
+        <label>@Html.DisplayNameFor(Model => Model.Url)</label>
+        @Html.EditorFor(model => model.Url, new { htmlAttributes = new { @class = "form-control", type = "text", placeholder = "Endereco rede social" } })
+        <span asp-validation-for="Url" class="text-danger"></span>
+    </div>
+    @Html.ActionLink("Voltar", "Index", "SocialMidia")
+    <button class="btn btn-primary" type="submit">Salvar</button>
+}
+
+
+@*<form asp-action="Edit">
 
     <div class="input-group mb-3">
         <div class="input-group-prepend">
@@ -36,7 +67,7 @@
 
     <a asp-controller="Admin" asp-action="AdminHome">Voltar</a>
     <button class="btn btn-info">Editar</button>
-</form>
+</form>*@
 
 <script>
     function changeIcon(name, icon) {
