--- a/JeffSite_WF_472/Views/Carousel/Delete.cshtml
+++ b/JeffSite_WF_472/Views/Carousel/Delete.cshtml
@@ -7,27 +7,28 @@
 <h1>@ViewData["Title"]</h1>
 <br>
 
-<form asp-action="Delete">
+@using (Html.BeginForm("Delete", "Carousel", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Id)</label>
-        <input type="text" class="form-control" asp-for="Id" readonly>
+        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Title)</label>
-        <input type="text" class="form-control" asp-for="Title" readonly>
+        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Description)</label>
-        <input type="text" class="form-control" asp-for="Description" readonly>
+        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.Link)</label>
-        <input type="text" class="form-control" asp-for="Link" readonly>
+        @Html.EditorFor(model => model.Link, new { htmlAttributes = new { @class = "form-control", type = "text", @readonly = "readonly" } })
     </div>
     <div class="form-group">
         <label>@Html.DisplayNameFor(Model => Model.ExpirationDate)</label>
-        <input type="date" class="form-control" asp-for="ExpirationDate" readonly>
+        @Html.EditorFor(model => model.ExpirationDate, new { htmlAttributes = new { @class = "form-control", type = "string", @readonly = "readonly" } })
     </div>
-    <a asp-controller="Carousel" asp-action="Index">Voltar</a>
+    @Html.ActionLink("Voltar", "Index", "Carousel")
     <button class="btn btn-danger">Excluir</button>
-</form>
+}
