--- a/JeffSite_WF_472/Views/Home/Index.cshtml
+++ b/JeffSite_WF_472/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
                     if (cont++ != qntCarousels)
                     {
                         <div class="carousel-item">
-                            <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..//img//Carousel//",item.Image)">
+                            <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..\\Content\\img\\Carousel\\",item.Image)">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5><a href="@item.Link" target="_blank">@item.Title</a></h5>
                                 <p>@item.Description</p>
@@ -43,7 +43,7 @@
                     else
                     {
                         <div class="carousel-item active">
-                            <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..//img//Carousel//",item.Image)">
+                            <img class="d-block w-100" style="background-color: lightgrey;" src="@string.Concat("..\\Content\\img\\Carousel\\",item.Image)">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5><a href="@item.Link" target="_blank">@item.Title</a></h5>
                                 <p>@item.Description</p>
